--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>Mithun Technologies</name>
-		<url>http://mithuntechnologies.com/</url>
+		<name>Vamsi Technologies</name>
+		<url>http://vamsiaws.xyz/</url>
 	</organization>
 
 	<properties>
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.233.227.116:9000</sonar.host.url>
+		<sonar.host.url>http://3.93.201.161:9000/</sonar.host.url>
 		<!--<sonar.login>909d10f38373cd3ad976753a526f5346de8d7a8e</sonar.login>-->
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> 
